--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <h1>Spooky</h1>
 <p>Im a spooky site yano.</p>
 <p>Don't mind me i'm just seeing what i gotta do here!</p>
-
+<p>Got no idea what i am doing lol</p>
 </body>
 </html>
