--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
 <p>Im a spooky site yano.</p>
 <p>Don't mind me i'm just seeing what i gotta do here!</p>
 <p>Got no idea what i am doing lol</p>
+
+<table border:1px; align="center">
+    <tr>
+        <th>Test 1</th>
+        <th>test 2</th>
+        <th>test 3</th>
+    </tr>
+</table>
+
+
+
 </body>
 </html>
