--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Spooky</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
 <h1>Spooky</h1>
