init html for main section issue

--- a/index.html
+++ b/index.html
@@ -18,8 +18,23 @@
         <th>test 3</th>
     </tr>
 </table>
+//This is my awesome game section
+<section id="trick-or-treat">
+    <div>
+        <h2>Trick or Treat!</h2>
+        <p>
+            Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
+            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
+            bonfire and received treats to appease the evil spirits.
+        </p>
+    </div>
+    //Image changer goes here!
+    <div>
+        <div class="start" id="game"></div>
+        <button class="trick-or-treat">Play game</button>
+    </div>
+</section>
 
-
-
+<script src="core.js"></script>
 </body>
 </html>
