--- a/index.html
+++ b/index.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Spooky</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Spooky</title>
+        <link
+          rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./styles.css" />
+      </head>
 <body>
 
-<h1>Spooky</h1>
-<p>Im a spooky site yano.</p>
-<p>Don't mind me i'm just seeing what i gotta do here!</p>
-<p>Got no idea what i am doing lol</p>
-
-<table border:1px; align="center">
-    <tr>
-        <th>Test 1</th>
-        <th>test 2</th>
-        <th>test 3</th>
-    </tr>
-</table>
-<section id="trick-or-treat">
-    <div>
-        <h2>Trick or Treat!</h2>
-        <p>
-            Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
-            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
-            bonfire and received treats to appease the evil spirits.
-        </p>
-    </div>
-    <div>
-        <div class="start" id="game"></div>
-        <button class="trick-or-treat">Play game</button>
-    </div>
-</section>
-
+    <nav class="navbar navbar-default navbar-static-top mb-4">
+        Spooky
+      </nav>
+      <div
+        class="container h-100 d-flex justify-content-center align-items-center"
+      >
+        <div class="row p-2">
+          <div class="col-sm-6 align-items-center justify-content-center">
+            <img src="./Scarecrow.jpeg" class="img-fluid" alt="Responsive image" />
+          </div>
+  
+          <div class="col-sm-6 imptext mt-2 p-4">
+            <h2>
+              Im a spooky site yano.
+            </h2>
+            <p>
+                Don't mind me i'm just seeing what i gotta do here!
+                Got no idea what i am doing , but it will be spooky!
+            </p>
+            <a
+              href="https://github.com/lukes-code/Hacktoberfest-Spooks"
+              class="btn btn-dark btn-lg p-4 rounded-0 active mt-4"
+              role="button"
+              aria-pressed="true"
+              >Play game</a
+            >
+          </div>
+        </div>
+      </div>
+      <section id="trick-or-treat">
+        <div class="container h-100 d-flex">
+            <div class="row">
+                <div class="col-12 imptext2 px-4"><h2>Trick or Treat!</h2>
+                </div>
+                <div class="col-12 imptext2 px-4"><p>
+                    Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century.
+                    It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
+                    bonfire and received treats to appease the evil spirits.
+                </p></div>
+            </div>
+        </div>
+    </section>
 <script src="core.js"></script>
 </body>
 </html>
