--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>Spooky</h1>
-<p>Im a spooky site yano.</p>
-<p>Don't mind me i'm just seeing what i gotta do here!</p>
-<p>Got no idea what i am doing lol</p>
-
-<table border:1px; align="center">
-    <tr>
-        <th>Test 1</th>
-        <th>test 2</th>
-        <th>test 3</th>
-    </tr>
-</table>
+    <navbar class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#section1">Section 1</a>
+      <a href="#trick-or-treat">Trick or Treat</a>
+      <a href="#footer">Footer</a>
+  </navbar>
+</body>
 
 
 
