fix: broken comment and minor change

--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
 <p>Don't mind me i'm just seeing what i gotta do here!</p>
 <p>Got no idea what i am doing lol</p>
 
-<table border:1px; align="center">
+<table style ="border:1px; text-align:center">
     <tr>
         <th>Test 1</th>
         <th>test 2</th>
         <th>test 3</th>
     </tr>
 </table>
-//This is my awesome game section
+
+<!--This is my awesome game section-->
+
 <section id="trick-or-treat">
     <div>
         <h2>Trick or Treat!</h2>
@@ -86,7 +88,7 @@
             bonfire and received treats to appease the evil spirits.
         </p>
     </div>
-    //Image changer goes here!
+    <!--Image changer goes here!-->
     <div>
         <div class="start" id="game"></div>
         <button class="trick-or-treat">Play game</button>
