--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
         <button class="trick-or-treat">Play game</button>
     </div>
 </section>
-  <script src="core.js"></script>
+
+<!-- this can be changed to semantics -->
+<div class="footer">
+	<p class="footer-text">
+		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
+	</p>
+</div>
+
+<script src="core.js"></script>
 </body>
+
 </html>
