new navbar location

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="#section1">Section 1</a>
       <a href="#trick-or-treat">Trick or Treat</a>
       <a href="#footer">Footer</a>
+      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
   </navbar>
 </body>
 
