--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
             bonfire and received treats to appease the evil spirits.
         </p>
+	<p>
+		Why do ghosts go on diets? .....So they can keep their ghoulish figures
+	</p>
     </div>
     <!--Image changer goes here!-->
     <div>
