--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="intro">
@@ -13,53 +13,74 @@
     </div>
     <div class="contacts">
         <div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/21207597?v=4" alt="Lukes">
             <div class="container">
-              <h4><b>Sleepy</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>Lukes Code</h2>
+              <a href="https://github.com/lukes-code" target="_blank">Contact Now</a>
             </div>
           </div>
           <div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/72252671?v=4" alt="Jacobsansom">
             <div class="container">
-              <h4><b>Sleepy</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>Jacobsansom</h2>
+              <a href="https://github.com/Jacobsansom" target="_blank">Contact Now</a>
             </div>
           </div>
           <div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/91487431?v=4" alt="lukes-codee">
             <div class="container">
-              <h4><b>Sleepy Coder</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>Lukes Codee</h2>
+              <a href="https://github.com/lukes-codee" target="_blank">Contact Now</a>
             </div>
           </div> 
           <div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/56090359?v=4" alt="A-KYBA">
             <div class="container">
-              <h4><b>Sleepy Developer</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>A-KYBA</h2>
+              <a href="https://github.com/A-KYBA" target="_blank">Contact Now</a>
             </div>
           </div><div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/46846115?v=4" alt="Honey Berman">
             <div class="container">
-              <h4><b>Sleepy Programmer</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>Honey Berman</h2>
+              <a href="https://github.com/HoneyBerman" target="_blank">Contact Now</a>
             </div>
           </div>
           <div class="card">
-            <img src="/Images/972039208.0.jpg" alt="Avatar" style="width:100%">
+            <img src="https://avatars.githubusercontent.com/u/56017774?v=4" alt="Developer Adam">
             <div class="container">
-              <h4><b>Sleepy Aryan</b></h4>
-              <p>Architect & Engineer</p>
+              <h2>Developer Adam</h2>
+              <a href="https://github.com/DeveloperAdam-github" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/74568847?v=4" alt="Hemant Bajaj">
+            <div class="container">
+              <h2>Hemant Bajaj</h2>
+              <a href="https://github.com/ORKO06" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/87265013?v=4" alt="Aryan Dash">
+            <div class="container">
+              <h2>Aryan Dash</h2>
+              <a href="https://github.com/SleepyAryan" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/59665768?v=4" alt="Ritik Tiwari">
+            <div class="container">
+              <h2>Ritik Tiwari</h2>
+              <a href="https://github.com/theritiktiwari" target="_blank">Contact Now</a>
             </div>
           </div>
         </div>
     </div>
     <ul class="soc" id="second">
-        <li><a href="Inst"><img src="/img/instagram.png"></a></li>
-        <li><a href="Face"><img src="/img/facebook.png"></a></li>
-        <li><a href="Git"><img src="/img/github.png"></a></li>
-        <li><a href="Discord"><img src="img/discord.png"></a></li>
+        <li><a href="https://instagram.com"><img src="/img/instagram.png"></a></li>
+        <li><a href="https://facebook.com"><img src="/img/facebook.png"></a></li>
+        <li><a href="https://github.com"><img src="/img/github.png"></a></li>
+        <li><a href="https://discord.com"><img src="img/discord.png"></a></li>
       </ul>
 </body>
 </html>
