--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="col-sm-6 align-items-center justify-content-center">
             <img src="./Scarecrow.jpeg" class="img-fluid" alt="Responsive image" />
           </div>
-  
+
           <div class="col-sm-6 imptext mt-2 p-4">
             <h2>
               Im a spooky site yano.
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-12 imptext2 px-4"><p>
                     Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century.
-                    It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
+                    It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
                     bonfire and received treats to appease the evil spirits.
                 </p></div>
             </div>
@@ -85,7 +85,7 @@
         <h2>Trick or Treat!</h2>
         <p>
             Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
-            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a 
+            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
             bonfire and received treats to appease the evil spirits.
         </p>
 	<p>
@@ -103,6 +103,7 @@
 <div class="footer">
 	<p class="footer-text">
 		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
+    <span class="footer-heart"/>
 	</p>
 </div>
 
