--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </section>
 
 <!-- this can be changed to semantics -->
-<div class="footer">
+<div id="footer">
 	<p class="footer-text">
 		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
 	</p>
