Fixed Jacbo's garbage

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </div>
         </div>
     </section>
-<h1>Spooky</h1>
-<p>Im a spooky site yano.</p>
-<p>Don't mind me i'm just seeing what i gotta do here!</p>
-<p>Got no idea what i am doing lol</p>
+<h1 style="color:rgb(255, 255, 255)">Spooky</h1>
+<p style="color:rgb(255, 255, 255)">Im a spooky site yano.</p>
+<a href="https://bit.ly/39YXwwq">Don't mind me i'm just seeing what i gotta do here!</a>
+<p style="color:rgb(255, 255, 255)">Got no idea what i am doing lol</p>
 
 <table style ="border:1px; text-align:center">
     <tr>
