--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,13 @@
               <a href="https://github.com/theritiktiwari" target="_blank">Contact Now</a>
             </div>
           </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/61869273?s=400&v=4" alt="ReubenCa">
+            <div class="container">
+              <h2>ReubenCa</h2>
+              <a href="https://github.com/ReubenCa" target="_blank">Contact Now</a>
+            </div>
+          </div>
         </div>
     </div>
     <ul class="soc" id="second">
