What: Moving style.css to styles.css. Why: It was becoming confusing that we had 2 similar style.css

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="intro">
@@ -32,7 +32,7 @@
               <h2>Lukes Codee</h2>
               <a href="https://github.com/lukes-codee" target="_blank">Contact Now</a>
             </div>
-          </div> 
+          </div>
           <div class="card">
             <img src="https://avatars.githubusercontent.com/u/56090359?v=4" alt="A-KYBA">
             <div class="container">
