--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <navbar class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="#section1">Section 1</a>
+      <a href="contact.html">Contact</a>
       <a href="#trick-or-treat">Trick or Treat</a>
       <a href="#footer">Footer</a>
       <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
