--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+  <navbar class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#section1">Section 1</a>
+    <a href="#trick-or-treat">Trick or Treat</a>
+    <a href="#footer">Footer</a> 
+    <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+  </navbar>
+</body>
 <body>
     <div class="intro">
         <h1>Contact Us</h1>
