changes done link to id

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 Got no idea what i am doing , but it will be spooky!
             </p>
             <a
-              href="https://github.com/lukes-code/Hacktoberfest-Spooks"
+              href="#trick-or-treat"  
               class="btn btn-dark btn-lg p-4 rounded-0 active mt-4"
               role="button"
               aria-pressed="true"
               >Play game</a
             >
-          </div>
+          </div> <!-- changes done link to id -->
         </div>
       </div>
       <section id="trick-or-treat">
