--- a/index.html
+++ b/index.html
@@ -1,112 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Spooky</title>
-        <link
-          rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="./styles.css" />
-      </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spooky</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
 <body>
-    <navbar class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#section1">Section 1</a>
-      <a href="#trick-or-treat">Trick or Treat</a>
-      <a href="#footer">Footer</a>
-      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+  <navbar class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#trick-or-treat">Trick or Treat</a>
+    <a href="#footer">Footer</a>
+    <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
   </navbar>
 </body>
 
-    <nav class="navbar navbar-default navbar-static-top mb-4">
-        Spooky
-      </nav>
-      <div
-        class="container h-100 d-flex justify-content-center align-items-center"
-      >
-        <div class="row p-2">
-          <div class="col-sm-6 align-items-center justify-content-center">
-            <img src="./Scarecrow.jpeg" class="img-fluid" alt="Responsive image" />
-          </div>
+<nav class="navbar navbar-default navbar-static-top mb-45"><a href="#">Spooky<span> Website</span></a></nav>
+<div class="container h-100 d-flex justify-content-center align-items-center">
+  <div class="row p-2">
+    <div class="col-sm-6 align-items-center justify-content-center">
+      <img src="./Scarecrow.jpeg" class="img-fluid" alt="Responsive image" />
+    </div>
 
-          <div class="col-sm-6 imptext mt-2 p-4">
-            <h2>
-              Im a spooky site yano.
-            </h2>
-            <p>
-                Don't mind me i'm just seeing what i gotta do here!
-                Got no idea what i am doing , but it will be spooky!
-            </p>
-            <a
-              href="https://github.com/lukes-code/Hacktoberfest-Spooks"
-              class="btn btn-dark btn-lg p-4 rounded-0 active mt-4"
-              role="button"
-              aria-pressed="true"
-              >Play game</a
-            >
-          </div>
+    <div class="col-sm-6 imptext mt-2 p-4">
+      <h2>
+        Im a spooky site yano.
+      </h2>
+      <p>
+        Don't mind me i'm just seeing what i gotta do here!
+        Got no idea what i am doing , but it will be spooky!
+      </p>
+      <a href="https://github.com/lukes-code/Hacktoberfest-Spooks" class="btn btn-dark btn-lg p-4 rounded-0 active mt-4" role="button" aria-pressed="true">Play game</a>
+    </div>
+  </div>
+</div>
+<section id="trick-or-treat">
+  <div class="container h-100 d-flex">
+    <div class="row">
+      <div class=" imptext2 px-4">
+        <h2>Spooky Jokes</h2>
+        <div class="col-12 imptext2 px-4">
+          <p>
+            Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century.
+            It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
+            bonfire and received treats to appease the evil spirits.
+          </p>
         </div>
+          <hr style="border-top: 1px solid red;">
+        <div id="spookyjokes"></div>
       </div>
-      <section id="trick-or-treat">
-        <div class="container h-100 d-flex">
-            <div class="row">
-                <div class="col-12 imptext2 px-4"><h2>Spooky Jokes</h2>
-                </div>
-                <div class="col-12 imptext2 px-4"><p>
-                    Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century.
-                    It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
-                    bonfire and received treats to appease the evil spirits.
-                </p></div>
-                <div id="spookyjokes"></div>
+    </div>
+  </div>
+</section>
+<h1 style="color:rgb(255, 255, 255); text-align:center; ">Spooky</h1>
+<p style="color:rgb(255, 255, 255);  text-align:center;">Im a spooky site yano.</p>
+<a href="https://bit.ly/39YXwwq" style="text-align:center; padding-left: 425px;">Don't mind me i'm just seeing what i gotta do here!</a>
+<p style="color:rgb(255, 255, 255); text-align:center; ">Got no idea what i am doing lol</p>
 
-            </div>
-        </div>
-    </section>
-<h1 style="color:rgb(255, 255, 255)">Spooky</h1>
-<p style="color:rgb(255, 255, 255)">Im a spooky site yano.</p>
-<a href="https://bit.ly/39YXwwq">Don't mind me i'm just seeing what i gotta do here!</a>
-<p style="color:rgb(255, 255, 255)">Got no idea what i am doing lol</p>
-
-<table style ="border:1px; text-align:center">
-    <tr>
-        <th>Test 1</th>
-        <th>test 2</th>
-        <th>test 3</th>
-    </tr>
-</table>
 
 <!--This is my awesome game section-->
 
 <section id="trick-or-treat">
-    <div>
-        <h2>Trick or Treat!</h2>
-        <p>
-            Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
-            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
-            bonfire and received treats to appease the evil spirits.
-        </p>
-	<p>
-		Why do ghosts go on diets? .....So they can keep their ghoulish figures
-	</p>
-    </div>
-    <!--Image changer goes here!-->
-    <div>
-        <div class="start" id="game"></div>
-        <button class="trick-or-treat">Play game</button>
-    </div>
+  <div>
+    <h2>Trick or Treat!</h2>
+    <p>
+      Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
+      .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
+      bonfire and received treats to appease the evil spirits.
+    </p>
+    <p>
+      Why do ghosts go on diets? .....So they can keep their ghoulish figures
+    </p>
+  </div>
+  <!--Image changer goes here!-->
+  <div>
+    <div class="start" id="game"></div>
+    <button class="trick-or-treat">Play game</button>
+  </div>
 </section>
 
 <!-- this can be changed to semantics -->
 <div id="footer">
-	<p class="footer-text">
-		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
-    <span class="footer-heart"/>
-	</p>
+  <p class="footer-text">
+    This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
+    <span class="footer-heart" />
+  </p>
 </div>
 
 <script src="core.js"></script>
