made changes to the contact page

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="Images/treat.png" type="image/png" sizes="16x16">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
@@ -9,10 +10,8 @@
 </head>
 <body>
   <navbar class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#section1">Section 1</a>
-    <a href="#trick-or-treat">Trick or Treat</a>
-    <a href="#footer">Footer</a> 
+    <a href="index.html">Home</a>
+    <a class="active" href="#Contact">Contact</a>
     <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
   </navbar>
 </body>
@@ -94,10 +93,10 @@
         </div>
     </div>
     <ul class="soc" id="second">
-        <li><a href="https://instagram.com"><img src="/img/instagram.png"></a></li>
-        <li><a href="https://facebook.com"><img src="/img/facebook.png"></a></li>
-        <li><a href="https://github.com"><img src="/img/github.png"></a></li>
-        <li><a href="https://discord.com"><img src="img/discord.png"></a></li>
+        <li><a href="https://instagram.com"><img src=".../img/instagram.png"></a></li>
+        <li><a href="https://facebook.com"><img src=".../img/facebook.png"></a></li>
+        <li><a href="https://github.com"><img src=".../img/github.png"></a></li>
+        <li><a href="https://discord.com"><img src=".../img/discord.png"></a></li>
       </ul>
 </body>
 </html>
