--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" href="Images/treat.png" type="image/png" sizes="16x16">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Spooky</title>
@@ -56,12 +57,7 @@
             <div class="row">
                 <div class="col-12 imptext2 px-4"><h2>Spooky Jokes</h2>
                 </div>
-                <div class="col-12 imptext2 px-4"><p>
-                    Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century.
-                    It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
-                    bonfire and received treats to appease the evil spirits.
-                </p></div>
-                <div id="spookyjokes"></div>
+                <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
 
             </div>
         </div>
