replaced blank section

--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,13 @@
               <a href="https://github.com/theritiktiwari" target="_blank">Contact Now</a>
             </div>
           </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/65579676?v=4" alt="Ritik Tiwari">
+            <div class="container">
+              <h2>Replace521</h2>
+              <a href="https://github.com/Replace521" target="_blank">Contact Now</a>
+            </div>
+          </div>
          
         </div>
     </div>
