--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           crossorigin="anonymous"
         />
         <link rel="stylesheet" href="./styles.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       </head>
 <body>
     <navbar class="topnav">
@@ -104,6 +105,12 @@
 	<p class="footer-text">
 		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
 	</p>
+</div>
+
+<div id="secret-modal">
+  <div id="secret-content">
+      <span id="secret-close">&times;</span>
+  </div>
 </div>
 
 <script src="core.js"></script>
