Fix semantics in footer

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 </section>
 
 <!-- this can be changed to semantics -->
-<div id="footer">
+<footer id="footer">
 	<p class="footer-text">
 		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
-    <span class="footer-heart"/>
+    <span class="footer-heart">
 	</p>
-</div>
+</footer>
 
 <div id="secret-modal">
   <div id="secret-content">
