--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <nav class="navbar navbar-default navbar-static-top mb-4">
         Spooky
       </nav>
-      <div
-        class="container h-100 d-flex justify-content-center align-items-center"
-      >
+      <div class="container h-100 d-flex justify-content-center align-items-center">
         <div class="row p-2">
           <div class="col-sm-6 align-items-center justify-content-center">
             <img src="./Scarecrow.jpeg" class="img-fluid" alt="Responsive image" />
@@ -38,11 +36,10 @@
 
           <div class="col-sm-6 imptext mt-2 p-4">
             <h2>
-              Im a spooky site yano.
+              Hacktoberfy
             </h2>
             <p>
-                Don't mind me i'm just seeing what i gotta do here!
-                Got no idea what i am doing , but it will be spooky!
+              This Spooky Site was made for hacktoberfest 2021 Here you can play Trick or Treat but who knows maybe theres more lurking in the darkness...
             </p>
             <a
               href="#trick-or-treat"
@@ -57,8 +54,8 @@
         <div class="container h-100 d-flex">
             <div class="row">
                 <div class="col-12 imptext2 px-4"><h2>Spooky Jokes</h2>
-                </div>
-                <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
+                  <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
+                </div>          
 
             </div>
         </div>
@@ -83,9 +80,7 @@
             .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
             bonfire and received treats to appease the evil spirits.
         </p>
-	<p>
-		Why do ghosts go on diets? .....So they can keep their ghoulish figures
-	</p>
+
     </div>
     <!--Image changer goes here!-->
     <div>
