Quality Of Live fixes

--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
             <p>
               This Spooky Site was made for hacktoberfest 2021 Here you can play Trick or Treat but who knows maybe theres more lurking in the darkness...
             </p>
-            <a
-              href="#trick-or-treat"
-              class="btn btn-dark btn-lg p-4 rounded-0 active mt-4"
-              
-              >Play game</a
-            >
+            <a href="#trick-or-treat"
+              class="btn btn-dark btn-lg p-4 rounded-0 active mt-4">Play game</a>
           </div>
         </div>
       </div>
@@ -56,16 +52,7 @@
                 <div class="col-12 imptext2 px-4"><h2>Spooky Jokes</h2>
                   <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
                 </div>          
-
             </div>
-        <div class="trick-or-treat-container">
-          <article>
-            <h2>Spooky Jokes</h2>
-          </article>
-          <article>
-            <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
-          </article>
-        </div>
     </section>
 
     <section id='do-not-scroll-further'>
@@ -106,7 +93,7 @@
      	<img class="sponsor" src="/images/intel.svg" alt="Intel">
     	<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
     </div>
-    <span class="footer-heart"/>	
+
 </footer>
 <footer id="footer">
 	<p class="footer-text">
