Contact page additions/fixes

--- a/contact.html
+++ b/contact.html
@@ -96,14 +96,49 @@
               <a href="https://github.com/Replace521" target="_blank">Contact Now</a>
             </div>
           </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/56369773?v=4" alt="Tom Lewis">
+            <div class="container">
+              <h2>TomLewis1</h2>
+              <a href="https://github.com/TomLewis1" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/44432694?v=4" alt="Théo Migeat">
+            <div class="container">
+              <h2>STM3900</h2>
+              <a href="https://github.com/STM3900" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/86184935?v=4" alt="Attreyee Mukherjee">
+            <div class="container">
+              <h2>a-muk</h2>
+              <a href="https://github.com/a-muk" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/67135844?v=4" alt="Isaac Arnold">
+            <div class="container">
+              <h2>IsaacArnold</h2>
+              <a href="https://github.com/IsaacArnold" target="_blank">Contact Now</a>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/36737394?v=4" alt="Konrad Szerszen">
+            <div class="container">
+              <h2>konradcodes</h2>
+              <a href="https://github.com/konradcodes" target="_blank">Contact Now</a>
+            </div>
+          </div>
          
         </div>
     </div>
     <ul class="soc" id="second">
-        <li><a href="https://instagram.com"><img src=".../img/instagram.png"></a></li>
-        <li><a href="https://facebook.com"><img src=".../img/facebook.png"></a></li>
-        <li><a href="https://github.com"><img src=".../img/github.png"></a></li>
-        <li><a href="https://discord.com"><img src=".../img/discord.png"></a></li>
+        <li><a href="https://instagram.com"><img src="img/instagram.png"></a></li>
+        <li><a href="https://facebook.com"><img src="img/facebook.png"></a></li>
+        <li><a href="https://github.com"><img src="img/github.png"></a></li>
+        <li><a href="https://discord.com"><img src="img/discord.png"></a></li>
       </ul>
 </body>
 </html>
