--- a/index.html
+++ b/index.html
@@ -86,20 +86,13 @@
 <!-- this can be changed to semantics -->
 <footer>
 	<img class="hacktober" src="/images/hacktober.svg" alt="Hacktober">
-	<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.</p>
+	<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.<span class="footer-heart"></span></p>
 	<div class="sponsors">    
 		<img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean">
      	<img class="sponsor" src="/images/appwrite.svg" alt="Appwrite">
      	<img class="sponsor" src="/images/intel.svg" alt="Intel">
     	<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
     </div>
-
-</footer>
-<footer id="footer">
-	<p class="footer-text">
-		This site was made for Hacktoberfest 2021, thank you to Digital Ocean, DEV and Github.
-    <span class="footer-heart">
-	</p>
 </footer>
 
 <div id="secret-modal">
