--- a/index.html
+++ b/index.html
@@ -85,14 +85,27 @@
 
 <!-- this can be changed to semantics -->
 <footer>
-	<img class="hacktober" src="/images/hacktober.svg" alt="Hacktober">
-	<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.<span class="footer-heart"></span></p>
-	<div class="sponsors">    
-		<img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean">
-     	<img class="sponsor" src="/images/appwrite.svg" alt="Appwrite">
-     	<img class="sponsor" src="/images/intel.svg" alt="Intel">
-    	<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
+  
+  	<div class="footer-garnish">
+		<img class="leaves" src="/images/leafleft.svg" alt="leafleft">
+	</div>
+
+	<div class="footer-content">
+		<img class="hacktober" src="/images/hacktober.svg" alt="Hacktober">
+		<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.</p>
+		<div class="sponsors">    
+			<img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean">
+			<img class="sponsor" src="/images/appwrite.svg" alt="Appwrite">
+			<img class="sponsor" src="/images/intel.svg" alt="Intel">
+			<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
+		</div>
+		<span class="footer-heart"></span>
+	</div>
+
+    <div class="footer-garnish">
+		<img class="leaves" src="/images/leafright.svg" alt="leafright">
     </div>
+  
 </footer>
 
 <div id="secret-modal">
