--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </section>
 
 <!-- this can be changed to semantics -->
-<footer>
+<footer id="footer">
   
   	<div class="footer-garnish">
 		<img class="leaves" src="/images/leafleft.svg" alt="leafleft">
