responsive menu navbar

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
         <link rel="stylesheet" href="./styles.css" />
       </head>
 <body>
-    <navbar class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="contact.html">Contact</a>
-      <a href="#trick-or-treat">Trick or Treat</a>
-      <a href="#footer">Footer</a>
-      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
-  </navbar>
-</body>
-
-    <nav class="navbar navbar-default navbar-static-top mb-4">
-        Spooky
+    <div class="header">
+      <button tabindex="0" id="button-hamburger" aria-label="navigation-menu">☰</button>
+      <navbar class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="#trick-or-treat">Trick or Treat</a>
+        <a href="#footer">Footer</a>
+        <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+      </navbar>
+      <navbar class="header__logo">
+        <a href="./index.html">Spooky</a>
       </nav>
+    </div>
       <div class="container h-100 d-flex justify-content-start align-items-center first-section">
         <div class="row p-2">
           <div class="col-sm-12 imptext mt-2 p-4">
