Responsive header added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous"
         />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="./styles.css" />
       </head>
 <body>
@@ -21,8 +23,48 @@
       <a href="#footer">Footer</a>
       <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
   </navbar>
-</body>
+  <div>
+  <div class="dview">
+    <div id="wrapper">
+      <div class="icon">
+        <span class="box">
+          <ul class="mobile-nav">
+            <li>
+              <a class="active" href="#home">Home</a>
+            </li>
+           <li>
+              <a href="#section1">Section 1</a>
+            </li>
 
+            <li>
+              <a href="#trick-or-treat">Trick or Treat</a>
+            </li>
+
+            <li>
+              <a href="#footer">Footer</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+          </li>
+        </ul>
+        
+        </span>          
+        <span class="line top"></span>
+        <span class="line middle"></span>
+        <span class="line bottom"></span>
+      </div>
+
+  </div>
+</div>
+</div>
+  <div id="sidebar"></div>
+  <script type="text/javascript">
+    $("#wrapper").click( function(){
+    $(".icon").toggleClass("close");
+});
+</script>
+</body>
+<div class="main-section">
     <nav class="navbar navbar-default navbar-static-top mb-4">
         Spooky
       </nav>
@@ -49,7 +91,7 @@
               aria-pressed="true"
               >Play game</a
             >
-          </div> <!-- changes done link to id -->
+          </div><!-- changes done link to id -->
         </div>
       </div>
       <section id="trick-or-treat">
@@ -104,6 +146,7 @@
 </div>
 
 <script src="core.js"></script>
+</div>
 </body>
 
 </html>
