--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="contact.html">Contact</a>
       <a href="#trick-or-treat">Trick or Treat</a>
       <a href="#footer">Footer</a>
-      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me (for a crappy youtube video)!</a>
   </navbar>
 </body>
 
