header responsive in contact page

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css" />
+
 </head>
 <body>
+  <navbar class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#section1">Section 1</a>
+    <a href="#trick-or-treat">Trick or Treat</a>
+    <a href="#footer">Footer</a>
+    <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+</navbar>
+<body>
+  <body>
+<div>
+<div class="dview">
+  <div id="wrapper">
+    <div class="icon">
+      <span class="box">
+        <ul class="mobile-nav">
+          <li>
+            <a class="active" href="#home">Home</a>
+          </li>
+         <li>
+            <a href="#section1">Section 1</a>
+          </li>
+
+          <li>
+            <a href="#trick-or-treat">Trick or Treat</a>
+          </li>
+
+          <li>
+            <a href="#footer">Footer</a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+        </li>
+      </ul>
+      
+      </span>          
+      <span class="line top"></span>
+      <span class="line middle"></span>
+      <span class="line bottom"></span>
+    </div>
+
+</div>
+</div>
+</div>
+<div id="sidebar"></div>
+<script type="text/javascript">
+  $("#wrapper").click( function(){
+  $(".icon").toggleClass("close");
+});
+</script>
+
     <div class="intro">
         <h1>Contact Us</h1>
     </div>
