Hyperlinks added in footer

--- a/index.html
+++ b/index.html
@@ -1,121 +1,127 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Spooky</title>
-        <link
-          rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous"
-        />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="./styles.css" />
-      </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spooky</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
 <body>
-    <div class="header">
-      <button tabindex="0" id="button-hamburger" aria-label="navigation-menu">☰</button>
-      <navbar class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="contact.html">Contact</a>
-        <a href="#trick-or-treat">Trick or Treat</a>
-        <a href="#footer">Footer</a>
-        <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
-      </navbar>
-      <navbar class="header__logo">
-        <a href="./index.html">Spooky</a>
+  <div class="header">
+    <button tabindex="0" id="button-hamburger" aria-label="navigation-menu">☰</button>
+    <navbar class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="contact.html">Contact</a>
+      <a href="#trick-or-treat">Trick or Treat</a>
+      <a href="#footer">Footer</a>
+      <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
+    </navbar>
+    <navbar class="header__logo">
+      <a href="./index.html">Spooky</a>
       </nav>
-    </div>
-      <div class="container h-100 d-flex justify-content-start align-items-center first-section">
-        <div class="row p-2">
-          <div class="col-sm-12 imptext mt-2 p-4">
-            <h2>
-              Im a spooky site yano.
-            </h2>
-            <p>
-                Don't mind me i'm just seeing what i gotta do here!
-                Got no idea what i am doing , but it will be spooky!
-            </p>
-            <a href="#trick-or-treat"
-              class="btn btn-dark btn-lg p-4 rounded-0 active mt-4">Play game</a>
-          </div>
-        </div>
-      </div>
-      <section id="trick-or-treat" style="border-bottom: 10px solid #000;">
-        <div class="container h-100 d-flex">
-            <div class="row">
-                <div class="col-12 imptext2 px-4"><h2>Spooky Jokes</h2>
-                </div>
-                <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
-            </div>
-        </div>
-    </section>
-
-<!--This is my awesome game section-->
-
-<section id="trick-or-treat">
-    <div>
-        <h2>Trick or Treat!</h2>
+  </div>
+  <div class="container h-100 d-flex justify-content-start align-items-center first-section">
+    <div class="row p-2">
+      <div class="col-sm-12 imptext mt-2 p-4">
+        <h2>
+          Im a spooky site yano.
+        </h2>
         <p>
-            Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland in the 9th century. .
-            .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons, performed dances around a
-            bonfire and received treats to appease the evil spirits.
+          Don't mind me i'm just seeing what i gotta do here!
+          Got no idea what i am doing , but it will be spooky!
         </p>
-	<p>
-		Why do ghosts go on diets? .....So they can keep their ghoulish figures
-	</p>
+        <a href="#trick-or-treat" class="btn btn-dark btn-lg p-4 rounded-0 active mt-4">Play game</a>
+      </div>
+    </div>
+  </div>
+  <section id="trick-or-treat" style="border-bottom: 10px solid #000;">
+    <div class="container h-100 d-flex">
+      <div class="row">
+        <div class="col-12 imptext2 px-4">
+          <h2>Spooky Jokes</h2>
+        </div>
+        <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
+      </div>
+    </div>
+  </section>
+
+  <!--This is my awesome game section-->
+
+  <section id="trick-or-treat">
+    <div>
+      <h2>Trick or Treat!</h2>
+      <p>
+        Trick or treating may seem like a modern event, but you can trace its roots back to Celtic Britain and Ireland
+        in the 9th century. .
+        .. It's believed that trick or treating evolved from a ritual where people dressed as ghosts and demons,
+        performed dances around a
+        bonfire and received treats to appease the evil spirits.
+      </p>
+      <p>
+        Why do ghosts go on diets? .....So they can keep their ghoulish figures
+      </p>
     </div>
     <!--Image changer goes here!-->
     <div>
-        <div class="start" id="game"></div>
-        <button class="trick-or-treat">Play game</button>
+      <div class="start" id="game"></div>
+      <button class="trick-or-treat">Play game</button>
     </div>
-</section>
-<section id='do-not-scroll-further'>
-  <h2 class='do-not-scroll-further-heading'>Do not scroll further!</h2>
-  <p class='scary-text'>
-    UOOOO TRICK OR TREAT!
-    <span class="glow">🎃</span>
-</p>
-</section>
+  </section>
+  <section id='do-not-scroll-further'>
+    <h2 class='do-not-scroll-further-heading'>Do not scroll further!</h2>
+    <p class='scary-text'>
+      UOOOO TRICK OR TREAT!
+      <span class="glow">🎃</span>
+    </p>
+  </section>
 
-<!-- this can be changed to semantics -->
-<footer id="footer">
-  
-  	<div class="footer-garnish">
-		<img class="leaves" src="/images/leafleft.svg" alt="leafleft">
-	</div>
-
-	<div class="footer-content">
-		<img class="hacktober" src="/images/hacktober.svg" alt="Hacktober">
-		<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.</p>
-		<div class="sponsors">    
-			<img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean">
-			<img class="sponsor" src="/images/appwrite.svg" alt="Appwrite">
-			<img class="sponsor" src="/images/intel.svg" alt="Intel">
-			<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
-		</div>
-		<span class="footer-heart"></span>
-	</div>
+  <!-- this can be changed to semantics -->
+  <footer id="footer">
 
     <div class="footer-garnish">
-		<img class="leaves" src="/images/leafright.svg" alt="leafright">
+      <img class="leaves" src="/images/leafleft.svg" alt="leafleft">
     </div>
-  
-</footer>
 
-<div id="secret-modal">
-  <div id="secret-content">
+    <div class="footer-content">
+      <a href="https://hacktoberfest.digitalocean.com/" target="_blank"><img class="hacktober"
+          src="/images/hacktober.svg" alt="Hacktober"></a>
+      <p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel,
+        Deepsource, DEV and Github.</p>
+      <div class="sponsors">
+        <a href="https://www.digitalocean.com/" target="_blank"><img class="sponsor" src="/images/digitalocean.svg"
+            alt="DigitalOcean"></a>
+        <a href="https://appwrite.io/" target="_blank"><img class="sponsor" src="/images/appwrite.svg"
+            alt="Appwrite"></a>
+        <a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img class="sponsor"
+            src="/images/intel.svg" alt="Intel"></a>
+        <a href="https://deepsource.io/" target="_blank"><img class="sponsor" src="/images/deepsource.svg"
+            alt="Deepsource"></a>
+      </div>
+      <span class="footer-heart"></span>
+    </div>
+
+    <div class="footer-garnish">
+      <img class="leaves" src="/images/leafright.svg" alt="leafright">
+    </div>
+
+  </footer>
+
+  <div id="secret-modal">
+    <div id="secret-content">
       <span id="secret-close">&times;</span>
+    </div>
   </div>
-</div>
 
-<script src="core.js"></script>
-<script src="navbar.js"></script>
+  <script src="core.js"></script>
+  <script src="navbar.js"></script>
 </body>
 
 </html>
