Added footer hyperlinks

--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@
 		<img class="leaves" src="/images/leafleft.svg" alt="leafleft">
 	</div>
 
+	<!--Added Hyperlinks to footer images (GaushJ)-->
 	<div class="footer-content">
-		<img class="hacktober" src="/images/hacktober.svg" alt="Hacktober">
+		<a href = "https://hacktoberfest.digitalocean.com/" target="_blank"><img class="hacktober" src="/images/hacktober.svg" alt="Hacktober"></a>
 		<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.</p>
 		<div class="sponsors">    
-			<img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean">
-			<img class="sponsor" src="/images/appwrite.svg" alt="Appwrite">
-			<img class="sponsor" src="/images/intel.svg" alt="Intel">
-			<img class="sponsor" src="/images/deepsource.svg" alt="Deepsource">
+			<a href="https://www.digitalocean.com/" target="_blank"><img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean"></a>
+			<a href="https://appwrite.io/" target="_blank"><img class="sponsor" src="/images/appwrite.svg" alt="Appwrite"></a>
+			<a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img class="sponsor" src="/images/intel.svg" alt="Intel"></a>
+			<a href="https://deepsource.io/" target="_blank"><img class="sponsor" src="/images/deepsource.svg" alt="Deepsource"></a>
 		</div>
 		<span class="footer-heart"></span>
 	</div>
