--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
       </div>
     </div>
   </div>
+
   <section id="trick-or-treat" style="border-bottom: 10px solid #000;">
-    <div class="container h-100 d-flex">
-      <div class="row">
-        <div class="col-12 imptext2 px-4">
-          <h2>Spooky Jokes</h2>
-        </div>
-        <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
-      </div>
+    <div>
+      <h2>Spooky Jokes</h2>
+      <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
+    </div>
+    <!--Image changer goes here!-->
+    <div>
+      <img src="/Images/characters.png" alt="Funny Characters" class="character-img">
     </div>
   </section>
 
