Added a new Section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </h2>
             <p>
                 Don't mind me i'm just seeing what i gotta do here!
-                Got no idea what i am doing , but it will be spooky!
+                Got no idea what i am doing , but it will be spooky! <span><img class="the-witch" src="Images/theWtich.png" alt="Image of a witch"></span>
             </p>
             <a href="#trick-or-treat"
               class="btn btn-dark btn-lg p-4 rounded-0 active mt-4">Play game</a>
@@ -53,6 +53,22 @@
                 <div id="spookyjokes" class="col-12 imptext2 px-4"></div>
             </div>
         </div>
+    </section>
+
+    <!-- Find the witch -->
+
+    <section class="section section--2 find-the-witch">
+      <div class="container--2">
+        <div class="container--2__text">
+          <h2>Find the witch</h2>
+          <p>Find the witch to get a reward</p>
+          <button class="button--reward hidden">Get Reward</button>
+        </div>
+        <div class="container--2__img">
+          <img class="witch-img" src="images/witch.png" alt="Witch image">
+          <p>It's not me you need to find</p>
+        </div>
+      </div>
     </section>
 
 <!--This is my awesome game section-->
