ADD alert on get rewards click

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container--2__text">
           <h2>Find the witch</h2>
           <p>Find the witch to get a reward</p>
-          <button class="button--reward hidden">Get Reward</button>
+          <button class="button--reward hidden" onclick="getRewards()">Get Reward</button>
         </div>
         <div class="container--2__img">
           <img class="witch-img" src="images/witch.png" alt="Witch image">
@@ -135,6 +135,11 @@
 
 <script src="core.js"></script>
 <script src="navbar.js"></script>
+<script type = "text/javascript">  
+  function getRewards() {  
+     alert("He-he-he you found me here's your reward 🎁");  
+  }  
+</script>  
 </body>
 
 </html>
