Add spooky birb link to nav

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
   <navbar class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="#Contact">Contact</a>
+    <a href="spooky-birb.html">Play Spooky Birb</a>
     <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
   </navbar>
 </body>
