--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <navbar class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="contact.html">Contact</a>
+      <a href="spooky-birb.html">Play Spooky Birb</a>
       <a href="#trick-or-treat">Trick or Treat</a>
       <a href="#footer">Footer</a>
       <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
