starting new section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <a class="active" href="#home">Home</a>
         <a href="contact.html">Contact</a>
         <a href="#trick-or-treat">Trick or Treat</a>
-       <a href="spooky-birb.html">Play Spooky Birb</a>
+        <a href="spooky-birb.html">Play Spooky Birb</a>
+        <a href="#carving">Pumpkin Carving</a>
         <a href="#footer">Footer</a>
         <a href="https://www.youtube.com/watch?v=n_qbGJuxCYY">Click Me!</a>
       </navbar>
@@ -382,6 +383,13 @@
     UOOOO TRICK OR TREAT!
     <span class="glow">🎃</span>
 </p>
+</section>
+
+<section id='carving' class="carving-section">
+  <h1>Pumpkin carving ideas!</h1>
+  <div class="carving-container">
+    
+  </div>
 </section>
 
 <!-- this can be changed to semantics -->
