--- a/index.html
+++ b/index.html
@@ -396,24 +396,24 @@
 <footer id="footer">
   
   	<div class="footer-garnish">
-		<img class="leaves" src="/images/leafleft.svg" alt="leafleft">
+		<img class="leaves" src="./images/leafleft.svg" alt="leafleft">
 	</div>
 
 	<!--Added Hyperlinks to footer images (GaushJ)-->
 	<div class="footer-content">
-		<a href = "https://hacktoberfest.digitalocean.com/" target="_blank"><img class="hacktober" src="/images/hacktober.svg" alt="Hacktober"></a>
+		<a href = "https://hacktoberfest.digitalocean.com/" target="_blank"><img class="hacktober" src="./images/hacktober.svg" alt="Hacktober"></a>
 		<p class="footer-text">This site was made for Hacktoberfest 2021. Thank you to Digital Ocean, Appwrite, Intel, Deepsource, DEV and Github.</p>
 		<div class="sponsors">    
-			<a href="https://www.digitalocean.com/" target="_blank"><img class="sponsor" src="/images/digitalocean.svg" alt="DigitalOcean"></a>
-			<a href="https://appwrite.io/" target="_blank"><img class="sponsor" src="/images/appwrite.svg" alt="Appwrite"></a>
-			<a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img class="sponsor" src="/images/intel.svg" alt="Intel"></a>
-			<a href="https://deepsource.io/" target="_blank"><img class="sponsor" src="/images/deepsource.svg" alt="Deepsource"></a>
+			<a href="https://www.digitalocean.com/" target="_blank"><img class="sponsor" src="./images/digitalocean.svg" alt="DigitalOcean"></a>
+			<a href="https://appwrite.io/" target="_blank"><img class="sponsor" src="./images/appwrite.svg" alt="Appwrite"></a>
+			<a href="https://www.intel.com/content/www/us/en/homepage.html" target="_blank"><img class="sponsor" src="./images/intel.svg" alt="Intel"></a>
+			<a href="https://deepsource.io/" target="_blank"><img class="sponsor" src="./images/deepsource.svg" alt="Deepsource"></a>
 		</div>
 		<span class="footer-heart"></span>
 	</div>
 
     <div class="footer-garnish">
-		<img class="leaves" src="/images/leafright.svg" alt="leafright">
+		<img class="leaves" src="./images/leafright.svg" alt="leafright">
     </div>
   
 </footer>
