html done for pumpkin carve, next some styling

--- a/index.html
+++ b/index.html
@@ -388,7 +388,16 @@
 <section id='carving' class="carving-section">
   <h1>Pumpkin carving ideas!</h1>
   <div class="carving-container">
-    
+    <div class="pumpkin-card">
+      <h3></h3>
+      <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/31620/bat-pumpkin-clipart-md.png" alt="">
+    </div>
+
+    <div class="pumpkin-card">
+      <h3></h3>
+      <img src="https://www.pngkey.com/png/full/420-4206826_lion-and-lamb-pumpkin-carving-patterns-132619-pumpkin.png" alt="">
+    </div>
+
   </div>
 </section>
 
