Made Navbar on spooky-bird game page similar to the Home page navbar

--- a/spooky-birb.html
+++ b/spooky-birb.html
@@ -9,17 +9,9 @@
     <title>Spooky Birb</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <style>
-        .header1 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: rgba(34, 34, 34, 0.5);
-      }
-    </style>
 </head>
-<body style="height: 100%;min-height: 100%;">
-    <div class="header1">
+<body style="height: 100%;min-height: 100%;" class="Body">
+    <div class="header">
         <button tabindex="0" id="button-hamburger" aria-label="navigation-menu">☰</button>
         <navbar class="topnav">
             <a href="index.html">Home</a>
@@ -74,6 +66,7 @@
       </div>
     
   </footer>
+    <!-- Reusing the already written script for Navbar for small size -->
     <script src="navbar.js"></script>
     <script src="spooky-birb.js"></script>
 </body>
