contact-page-fix

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,7 @@
   <title>Contact Us</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>#
-  
-
+<body>
   
   <navbar class="topnav">
     <a class="active" href="index.html">Home</a>  
