Added responsive CSS for header banner and removed inline style on button.

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     </div>
       <div class="container h-100 d-flex justify-content-start align-items-center first-section">
         <div class="row">
-          <div class="col">
+          <div class="col d-none d-sm-none d-xs-none d-md-block">
           </div>
           <div class="col imp ml-auto">
             <h2>
               I'm a Spooky Poltergeist.
             </h2>
-            <p>
+            <p class="header-text">
               I would like , if I may , to take you on a mysterious adventure as I'm close to where you reside. <span><img class="the-witch" src="Images/theWtich.png" alt="Image of a witch"></span>
             </p>
             <a href="#trick-or-treat"
-              class="btn btn-dark btn-lg p-4 rounded-0 active mr-5" style="float:right">Play game</a>
+              class="btn btn-dark btn-lg p-4 rounded-0 active mr-5">Play game</a>
           </div>
         </div>
       </div>
