--- a/spooky-birb.html
+++ b/spooky-birb.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body style="height: 100%;min-height: 100%;" class="Body">
+<body style="height: 100%;min-height: 100%;width: 100%;" class="Body">
     <div class="header">
         <button tabindex="0" id="button-hamburger" aria-label="navigation-menu">☰</button>
         <navbar class="topnav">
